Fix for MO2MP-2148: [Robo2PROD] Portfolio Summary - Net Deposits spacing issue on some Mobile devices

--- a/src/app/investment/manage-investments/your-portfolio/your-portfolio.component.scss
+++ b/src/app/investment/manage-investments/your-portfolio/your-portfolio.component.scss
@@ -914,6 +914,11 @@ app-your-portfolio {
     }
 
   }
+  .pad-top {
+    @include iphone5 {
+      padding-top: 15px;
+    }
+  }
 }
 .modal-body {
   width: 375px;
